# architecture_python

./: README.md
DZ2/: auth_openapi.json  docker-compose.yml  wall_openapi.json
DZ2/auth/: db.py  main.py  methods.py  models.py  pyproject.toml  routers.py  schemas.py  settings.py
DZ2/wall/: .env  main.py  methods.py  pyproject.toml
DZ3/: docker-compose.yml
DZ3/auth/: routers.py  settings.py
DZ3/wall/: settings.py
DZ4/: docker-compose.yml  init_pg.sh
DZ4/auth/: .env  Dockerfile  methods.py  pyproject.toml
DZ4/wall/: .env  methods.py  routers.py  settings.py
DZ5/: README.md  docker-compose.yml
DZ5/auth/: cache.py  db.py  main.py  methods.py  models.py  pyproject.toml  routers.py  schemas.py  settings.py
DZ5/wall/: Dockerfile  models.py  pyproject.toml  schemas.py
ДЗ 1/: README.md  workspace.dsl
